// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeOneOf fails when value is in given array 1`] = `
"expect(item).not.toBeOneOf(list)

Expected value to not be in list:
  [1, 2, 3]
Received:
  1"
`;

exports[`.toBeOneOf fails when value is not in given array 1`] = `
"expect(item).toBeOneOf(list)

Expected value to be in list:
  [1, 2, 3]
Received:
  4"
`;
